# basilisk

./: .gitignore  build_wheel.py  conanfile.py  pyproject.toml  setup.py
.github/workflows/: cibuildwheel.yml
